--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache:
   directories:
     - plugins/gui/frontend/gosa/build
     - plugins/gui/frontend/gosa/node_modules
-    - /home/travis/virtualenv
+    - .env
     - /tmp/qx5.1
 before_install:
     - sudo cp test_conf/org.gosa.conf /etc/dbus-1/system.d/
@@ -18,6 +18,8 @@ before_install:
     - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel # start it
+    - virtualenv -p /usr/bin/python3.5 --system-site-packages .env
+    - source .env/bin/activate
     - pip install --upgrade pip # upgrade pip, we need the latest version
     # some preparations for the tests
     - export TZ=Europe/Berlin
@@ -27,9 +29,9 @@ before_install:
     - sudo chown travis:travis /tmp/workflows
 install:
     - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev # needed to compile dbus-python
-    - sudo apt-get install -qq python-gi gir1.2-gtk-3.0 ibus gir1.2-appindicator3-0.1 gir1.2-notify-0.7 gir1.2-glib-2.0
+    #- sudo apt-get install -qq python-gi gir1.2-gtk-3.0 ibus gir1.2-appindicator3-0.1 gir1.2-notify-0.7 gir1.2-glib-2.0
     - pip3 install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python hidraw-pure
-    - pip3 install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.21.1
+    #- pip3 install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.21.1
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
