--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,14 @@ cache:
     - .env
     - /tmp/qx5.1
 before_install:
+    - sudo ls -la /usr/bin/python*
+    - which python3.5
     - sudo cp test_conf/org.gosa.conf /etc/dbus-1/system.d/
     - sudo service dbus reload
     - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel # start it
-    - virtualenv -p /usr/bin/python3.5 --system-site-packages .env
+    - virtualenv --python=python3.5 --system-site-packages .env
     - source .env/bin/activate
     - pip install --upgrade pip # upgrade pip, we need the latest version
     # some preparations for the tests
