--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,6 @@ cache:
     - .env
     - /tmp/qx5.1
 before_install:
-    - sudo ls -la /usr/bin/python*
-    - which python3.5
     - sudo cp test_conf/org.gosa.conf /etc/dbus-1/system.d/
     - sudo service dbus reload
     - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
@@ -31,9 +29,9 @@ before_install:
     - sudo chown travis:travis /tmp/workflows
 install:
     - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev # needed to compile dbus-python
-    #- sudo apt-get install -qq python-gi gir1.2-gtk-3.0 ibus gir1.2-appindicator3-0.1 gir1.2-notify-0.7 gir1.2-glib-2.0
+    - sudo apt-get install python-gi gir1.2-gtk-3.0 ibus gir1.2-appindicator3-0.1 gir1.2-notify-0.7 gir1.2-glib-2.0
     - pip3 install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python hidraw-pure
-    #- pip3 install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.21.1
+    - pip3 install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.21.1
 before_script:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
