--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
     - sudo cp ./test_conf/config /etc/gosa/
     - sudo chown travis:travis /tmp/workflows
 install:
-    - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev # needed to compile dbus-python
+    - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev libusb-dev # needed to compile dbus-python
     - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python hidraw-pure
     - pip install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.21.1
 before_script:
