introduce basic structure for accessing and changing settings from the GUI client. Currently only the config-settings can be changed with this feature, more setting handlers can be registered via entry-points
 refs #96

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -71,7 +71,8 @@
   {
     "common": {
       "lint-check": {
-        "ignore-environment-nonlit-key": true
+        "ignore-environment-nonlit-key": true,
+        "allowed-globals" : [ "Proxy" ]
       }
     },
 
