remove proxied handlers, retrieve a list of allowed properties from backend instead
 refs #96

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -71,8 +71,7 @@
   {
     "common": {
       "lint-check": {
-        "ignore-environment-nonlit-key": true,
-        "allowed-globals" : [ "Proxy" ]
+        "ignore-environment-nonlit-key": true
       }
     },
 
