- add settings page with basic webhook editor (currently only showing existing ones, no editing yet) - deleted obsolete Renderer.js

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -138,7 +138,8 @@
 
     "build-script":
     {
-      "include": ["gosa.ui.widgets.*", "gosa.LocalConfig", "gosa.ui.dialogs.*", "gosa.engine.extensions.*", "gosa.plugins.*", "qx.*"],
+      "include": ["gosa.ui.widgets.*", "gosa.LocalConfig", "gosa.ui.dialogs.*", "gosa.engine.extensions.*",
+        "gosa.plugins.*", "gosa.ui.settings.*", "qx.*"],
       "exclude": ["qx.test.*"],
 
       "variants" :
@@ -199,7 +200,8 @@
 
     "source-script":
     {
-      "include": ["gosa.ui.widgets.*", "gosa.LocalConfig", "gosa.ui.dialogs.*", "gosa.engine.extensions.*", "gosa.plugins.*", "qx.*"],
+      "include": ["gosa.ui.widgets.*", "gosa.LocalConfig", "gosa.ui.dialogs.*", "gosa.engine.extensions.*", "gosa.plugins.*",
+        "gosa.ui.settings.*", "qx.*"],
       "exclude": ["qx.test.*"],
 
       "variants" :
@@ -262,7 +264,7 @@
             "include" : [
             "${QXTHEME}", "gosa.Application", "gosa.ui.widgets.*", "gosa.engine.*",
             "gosa.ui.dialogs.*", "gosa.plugins.search.*", "gosa.plugins.workflowstarter.*",
-            "gosa.plugins.separator.*", "gosa.LocalConfig", "qx.*"
+            "gosa.plugins.separator.*", "gosa.LocalConfig", "gosa.ui.settings.*", "qx.*"
           ] }
         }
       }
