--- a/example/config
+++ b/example/config
@@ -3,6 +3,7 @@ profile = False
 base = dc=example,dc=net
 domain = net.example
 id = backend
+idGenerator = "{%sn}-{%givenName[0-4]}"
 
 [http]
 host = 0.0.0.0
