color log messages

--- a/example/config
+++ b/example/config
@@ -69,7 +69,7 @@ qualname=gosa
 propagate=0
 
 [handler_console]
-class=StreamHandler
+class = colorlog.StreamHandler
 formatter=console
 args=(sys.stderr,)
 
@@ -84,6 +84,7 @@ datefmt=
 class=logging.Formatter
 
 [formatter_console]
-format=%(asctime)s %(levelname)s: %(module)s - %(message)s
-datefmt=
-class=logging.Formatter
+format = %(log_color)s%(asctime)s %(levelname)s: %(name)s - %(message)s
+datefmt =
+class = colorlog.ColoredFormatter
+
