--- a/client/src/gosa/client/data/client.conf
+++ b/client/src/gosa/client/data/client.conf
@@ -1,9 +1,6 @@
 [core]
 profile = False
 
-[amqp]
-#url = %URL%
-
 [puppet]
 target = /etc/puppet
 command = /usr/bin/puppet
@@ -11,7 +8,7 @@ report-dir = /var/log/puppet
 manifest = %(target)s/manifests/site.pp
 
 [loggers]
-keys=root,clacks
+keys=root,gosa
 
 [handlers]
 keys=syslog
@@ -23,10 +20,10 @@ keys=syslog
 level=ERROR
 handlers=syslog
 
-[logger_clacks]
+[logger_gosa]
 level=INFO
 handlers=syslog
-qualname=clacks
+qualname=gosa
 propagate=0
 
 [handler_syslog]
