change group name

--- a/packaging/debian/org.gosa.conf
+++ b/packaging/debian/org.gosa.conf
@@ -7,7 +7,7 @@
     <allow own="org.gosa"/>
   </policy>
 
-  <policy group="gonicus">
+  <policy group="gosa">
     <allow own="org.gosa"/>
     <allow receive_sender="org.gosa"/>
     <allow send_destination="org.gosa"
