change group name

--- a/test_conf/org.gosa.conf
+++ b/test_conf/org.gosa.conf
@@ -8,7 +8,7 @@
      <allow own="org.gosa"/>
    </policy>
 
-   <policy group="gonicus">
+   <policy group="travis">
      <allow own="org.gosa"/>
      <allow receive_sender="org.gosa"/>
      <allow send_destination="org.gosa"
