--- a/test_conf/org.gosa.conf
+++ b/test_conf/org.gosa.conf
@@ -3,7 +3,7 @@
   "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
  <busconfig>
 
-   <!-- Only user root can own the clacks dbus instance -->
+   <!-- Only user root can own the gosa dbus instance -->
    <policy user="root">
      <allow own="org.gosa"/>
    </policy>
