--- a/example/config
+++ b/example/config
@@ -43,6 +43,9 @@ key = tester
 [webhooks]
 ldap_monitor_token = 9d6250c0-6413-4b1e-98d9-7b763472962a
 
+[cups]
+spool = /tmp/spool
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
