fix bash code suggestions

--- a/backend/src/gosa/backend/data/templates/gosaApplicationScript.json
+++ b/backend/src/gosa/backend/data/templates/gosaApplicationScript.json
@@ -42,7 +42,7 @@
                 "enabled": false
               },
               "completionProviders": {
-                "gosa.data.editor.completion.Application": ["bash", "python"]
+                "gosa.data.editor.completion.Application": ["bash", "python", "plaintext"]
               }
             }
           }
