--- a/example/config
+++ b/example/config
@@ -48,6 +48,10 @@ ldap_monitor_token = 9d6250c0-6413-4b1e-98d9-7b763472962a
 [cups]
 spool = /tmp/spool
 
+[foreman]
+#host-rdn = ou=incoming
+#group-rdn =
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
