disable/enable chown by config and fix the chown process

--- a/example/config
+++ b/example/config
@@ -31,6 +31,8 @@ index = true
 
 [user]
 image-path = /tmp/images
+# chown user menu after generation to allow user to change the entries)
+# chown-menu = false
 
 [gui]
 debug = true
