--- a/test_conf/config
+++ b/test_conf/config
@@ -56,6 +56,10 @@ webhook-token = 9d6250c0-6413-4b1e-98d9-7b763472962a
 [cups]
 spool = /tmp/spool
 
+[foreman]
+host-rdn =
+group-rdn =
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
