--- a/travis_conf/config
+++ b/travis_conf/config
@@ -18,7 +18,7 @@ pool-size = 10
 
 [backend-database]
 #database = sqlite:///:memory:
-database = postgresql://admin:secret@localhost:5432/gosa123
+database = postgresql://admin:secret@localhost:5432/gosa
 
 [backend-json]
 database-file = /tmp/gosa.json
