add dep and copy the travis_conf dbus config

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     - /tmp/qx5.1
 before_install:
     - sudo apt-get update
-    - sudo cp test_conf/org.gosa.conf /etc/dbus-1/system.d/
+    - sudo cp travis_conf/org.gosa.conf /etc/dbus-1/system.d/
     - sudo service dbus reload
     - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
