fix tests and ignore sqlalchemy warnings

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -2,3 +2,4 @@
 testpaths = src/tests
 addopts = --doctest-modules --cov=src/gosa --cov-report=html --cov-report=term-missing
 python_classes = *TestCase
+filterwarnings = ignore::sqlalchemy.exc.SAWarning
