--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
     - sudo chown travis:travis /tmp/workflows
     - sudo chown travis:travis /tmp/images
 install:
-    - sudo apt-get install pylint python3-tornado python3-pytest libcups2-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev python3-dbus python3-dns
+    - sudo apt-get install pylint python3-tornado python3-pytest libcups2-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev python3-dbus python3-dnspython
     - pip install setproctitle coveralls hidraw-pure
     #- pip install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.24
 before_script:
