--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,8 @@ script:
     # setup GOsa, install deps...
     - ./setup.py develop
     # finally run the tests, with running dbus
-    - dbus-launch ./setup.py test --addopts="--runslow --travis"
+    - cd backend
+    - dbus-launch ./setup.py test --addopts="--runslow --travis src/tests/backend/plugins/rpc/test_methods.py::RpcMethodsTestCase::test_search"
 after_success:
     # send test coverage results to coveralls.io
     - coveralls --merge=coveralls.json
