only backend tests for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ script:
     # setup GOsa, install deps...
     - ./setup.py develop
     # finally run the tests, with running dbus
+    - cd backend
     - dbus-launch ./setup.py test --addopts="--runslow --travis"
 after_success:
     # send test coverage results to coveralls.io
