--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
     - ./setup.py develop
     # finally run the tests, with running dbus
     - cd backend
-    - dbus-launch ./setup.py test --addopts="--runslow --travis"
+    - dbus-launch ./setup.py test --addopts="--runslow --travis -x -v"
 after_success:
     # send test coverage results to coveralls.io
     - coveralls --merge=coveralls.json
