--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ script:
     # setup GOsa, install deps...
     - ./setup.py develop
     # finally run the tests, with running dbus
+    - export ASYNC_TEST_TIMEOUT=10
     - dbus-launch ./setup.py test --addopts="--runslow --travis -v"
 after_success:
     # send test coverage results to coveralls.io
