--- a/configs/travis_conf/config
+++ b/configs/travis_conf/config
@@ -54,7 +54,7 @@ webhook-target = http://localhost:8050/hooks/
 webhook-token = 9d6250c0-6413-4b1e-98d9-7b763472962a
 
 [cups]
-spool = /tmp/spool
+spool = /tmp/test-spool
 
 [foreman]
 host-rdn =
