--- a/proxy/setup.cfg
+++ b/proxy/setup.cfg
@@ -7,21 +7,21 @@ tag_date = false
 tag_svn_revision = false
 
 [extract_messages]
-output_file = gosa/proxy/locale/messages.pot
+output_file = src/gosa/proxy/locale/messages.pot
 copyright_holder = GONICUS GmbH
 msgid_bugs_address = gosa@oss.gonicus.de
 keywords = _ ngettext:1,2 N_
 add_comments = TRANSLATOR:
 strip_comments = 1
-input_dirs = gosa/proxy
+input_dirs = src/gosa/proxy
 
 [init_catalog]
-output_dir = gosa/proxy/locale
-input_file = gosa/proxy/locale/messages.pot
+output_dir = src/gosa/proxy/locale
+input_file = src/gosa/proxy/locale/messages.pot
 
 [compile_catalog]
-directory = gosa/proxy/locale
+directory = src/gosa/proxy/locale
 
 [update_catalog]
-output_dir = gosa/proxy/locale
-input_file = gosa/proxy/locale/messages.pot
+output_dir = src/gosa/proxy/locale
+input_file = src/gosa/proxy/locale/messages.pot
