--- a/utils/setup.cfg
+++ b/utils/setup.cfg
@@ -1,2 +1,22 @@
 [aliases]
 test=pytest
+
+[extract_messages]
+output_file = src/gosa/utils/locale/messages.pot
+copyright_holder = GONICUS GmbH
+msgid_bugs_address = gosa@oss.gonicus.de
+keywords = _ ngettext:1,2 N_
+add_comments = TRANSLATOR:
+strip_comments = 1
+input_dirs = src/gosa/utils
+
+[init_catalog]
+output_dir = src/gosa/utils/locale
+input_file = src/gosa/utils/locale/messages.pot
+
+[compile_catalog]
+directory = src/gosa/utils/locale
+
+[update_catalog]
+output_dir = src/gosa/utils/locale
+input_file = src/gosa/utils/locale/messages.pot
