extract i18n string from object definitions

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -14,6 +14,7 @@ keywords = _ ngettext:1,2 N_
 add_comments = TRANSLATOR:
 strip_comments = 1
 input_dirs = src/gosa/backend
+mapping_file = mapping.cfg
 
 [init_catalog]
 output_dir = src/gosa/backend/locale
