- add no translation marker for values that must not be translated - remove some message extraction paths as we do not need them - localize get_attributes command

--- a/backend/mapping.cfg
+++ b/backend/mapping.cfg
@@ -4,5 +4,5 @@
 gosa-objects = gosa.babel_extract:extract_object_xml
 
 [gosa-objects: **/data/objects/*.xml]
-paths = //o:DisplayName //o:Description //o:Attributes/o:Attribute/o:Values/o:Value[@key]
+paths = //o:Attributes/o:Attribute/o:Values/o:Value
 namespaces = {"o": "http://www.gonicus.de/Objects"}
