- workflow i18n handling console command added - workflow_path config options renamed to workflow-path - xml extraction script moved to gosa.common

--- a/backend/mapping.cfg
+++ b/backend/mapping.cfg
@@ -1,7 +1,7 @@
 [python: **.py]
 
 [extractors]
-gosa-objects = gosa.babel_extract:extract_object_xml
+gosa-objects = gosa.common.babel_extract:extract_object_xml
 
 [gosa-objects: **/data/objects/*.xml]
 paths = //o:Attributes/o:Attribute/o:Values/o:Value
