--- a/configs/test_conf/config
+++ b/configs/test_conf/config
@@ -3,7 +3,7 @@ profile = False
 base = dc=example,dc=net
 domain = net.example
 id = fff0c8ad-d26b-4b6d-8e8e-75e054614dd9
-workflow_path = /tmp/workflows
+workflow-path = /tmp/workflows
 
 [http]
 host = localhost
