- old json based translation replaces with gettext in workflows

--- a/utils/src/gosa/utils/data/workflow-mapping.cfg
+++ b/utils/src/gosa/utils/data/workflow-mapping.cfg
@@ -2,6 +2,9 @@
 
 [extractors]
 gosa-objects = gosa.common.babel_extract:extract_object_xml
+gosa-templates = gosa.common.babel_extract:extract_template_json
+
+[gosa-templates: **/templates/*.json]
 
 [gosa-objects: **/workflow.xml]
 paths = /o:Workflow/o:DisplayName //o:Description /o:Workflow/o:Category //o:Attributes/o:Attribute/o:Values/o:Value
