--- a/backend/mapping.cfg
+++ b/backend/mapping.cfg
@@ -2,6 +2,9 @@
 
 [extractors]
 gosa-objects = gosa.common.babel_extract:extract_object_xml
+gosa-templates = gosa.common.babel_extract:extract_template_json
+
+[gosa-templates: **/templates/*.json]
 
 [gosa-objects: **/data/objects/*.xml]
 paths = //o:Attributes/o:Attribute/o:Values/o:Value
