--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ before_install:
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
+  - ls -la
+  - cat docker-compose
   - sudo mv docker-compose /usr/local/bin
   - export PYENV_VERSION=3.6-dev
   - sudo apt-get update
