--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_install:
   - sudo chown travis:travis /tmp/workflows
   - sudo chown travis:travis /tmp/images
 install:
-  - sudo apt-get install dbus-x11 libcups2-dev libdbus-1-dev libdbus-glib-1-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev # needed to compile dbus-python
+  - sudo apt-get install dbus-x11 libcups2-dev libdbus-1-dev libdbus-glib-1-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev python3-decorator
   - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python hidraw-pure
   #- pip install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.24
 before_script:
